<resources>
    <!-- Global -->
    <string name="app_name">Delivery</string>

    <!-- Main Activity -->
    <string name="activity_main_permission_not_authorized_error">Veuillez autoriser les permissions pour pouvoir utiliser l\'application</string>
    <string name="activity_main_google_account_not_selected">Aucun compte Google sélectionné. Les fonctionnalités cloud ne sont pas accessibles</string>

    <!-- DeliveryListFragment -->
    <string name="fragment_delivery_list_title">Livraisons du jour</string>

    <!-- NewDeliveryFragment -->


    <string name="fragment_new_delivery_title">Création d\'une livraison</string>
    <string name="fragment_new_delivery_divider_pod">Point de livraison</string>
    <string name="fragment_new_delivery_hint_pod">Selection du magasin...</string>
    <string name="fragment_new_delivery_hint_receiver">Nom...</string>
    <string name="fragment_new_delivery_button_finished">Terminer la livraison</string>
    <string name="fragment_new_delivery_empty_not_saved">Word not saved because it is empty.</string>
    <string name="fragment_new_delivery_divider_products">Selection des dépots/reprises</string>
    <string name="fragment_new_delivery_button_deposit_text">Déposer des produits</string>
    <string name="fragment_new_delivery_button_take_text">Reprendre des produits</string>
    <string name="fragment_new_delivery_button_sell">Vente directe</string>
    <string name="fragment_new_delivery_">Selection des dépots/reprises</string>
    <string name="fragment_new_delivery_divider_deliver">Livreur</string>
    <string name="fragment_new_delivery_hint_deliver_comment">Remarques...</string>
    <string name="fragment_new_delivery_divider_receiver">Réceptionniste</string>
    <string name="fragment_new_delivery_hint_receiver_comment">Remarques...</string>
    <string name="fragment_new_delivery_hint_signature">Signer les documents</string>
    <string name="fragment_new_delivery_divider_documens">Documents</string>
    <string name="fragment_new_delivery_divider_signature">Signature</string>
    <string name="fragment_new_delivery_hint_note">Note d\'envoi</string>
    <string name="fragment_new_delivery_vat_applicable">TVA applicable</string>

    <string name="fragment_new_delivery_snackbar_notreadytosign">Avant de signer vous devez générer la note d\'envoi</string>


    <!-- Select products-->
    <string name="fragment_select_products_title">Sélection des produits</string>
    <string name="fragment_select_product_filter_hint">Filtrer les produits</string>
    <string name="fragment_select_product_switch_only_label">Selection</string>


    <string name="fragment_select_products_custom_name_hint">Nom du produit</string>
    <string name="fragment_select_products_custom_price_hvat_hint">Prix HTVA</string>
    <string name="fragment_select_products_custom_vat_hint">TVA %</string>
    <string name="fragment_select_products_custom_price_vat_hint">Prix TVAC</string>
    <string name="fragment_select_products_custom_quantity_hint">Quantité</string>
    <string name="fragment_select_products_custom_button_delete">Supprimer</string>
    <string name="fragment_select_products_custom_button_save">Enregistrer</string>


    <!-- note -->
    <string name="pdf_note_creator_file_generated">Fichier PDF créé!</string>
    <string name="pdf_note_creator_file_not_generated">ERREUR lors de la création du fichier PDF!</string>
    <string name="pdf_note_comments_receiver_label">Commentaire réceptionniste:</string>
    <string name="pdf_note_comments_delivery_label">Commentaire livreur:</string>
    <string name="pdf_note_name_delivery_label">Livreur:</string>
    <string name="pdf_note_name_receiver_label">Réceptionniste:</string>

    <!-- Note mail-->
    <string name="pdf_note_mail_subject_prefix">Note d\'envoi</string>


    <!--Acra -->
    <string name="acra_dialog_errormessage"> Une erreur innatendue est survenue. Vous pouvez prévenir l\'équipe de développement</string>
    <string name="acra_mail_subject"> Crash report - Delivery application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- PDF note-->
    <string name="fragment_signature_save_button">Valider</string>
    <string name="fragment_signature_dialog_title">Signature...</string>
    <string name="pdf_note_product_list_title_type" />
    <string name="pdf_note_product_detail_header_product_name">Description</string>
    <string name="pdf_note_product_detail_header_type">Presta</string>
    <string name="pdf_note_product_detail_header_quantity">Qti</string>
    <string name="pdf_note_product_detail_header_discount">%</string>
    <string name="pdf_note_product_detail_header_pu_hvat">PU HTVA</string>
    <string name="pdf_note_product_detail_header_pu_vat">PU TVA</string>
    <string name="pdf_note_product_detail_header_pt_hvat">PT HTVA</string>
    <string name="pdf_note_product_detail_header_vat">TVA %</string>
    <string name="pdf_note_product_detail_header_pt_vat">PT TVA</string>

    <string name="pdf_note_client_total_ht_label">Total HTVA</string>
    <string name="pdf_note_client_total_taxes_label">Total TVA</string>
    <string name="pdf_note_client_total_label">TOTAL</string>
    <string name="pdf_note_client_total_depos_ht_label">Dépots HTVA</string>
    <string name="pdf_note_client_total_reprise_ht_label">Retours HTVA</string>

    <!-- menu -->
    <string name="fragment_settings_title">Paramètres</string>

    <!-- main_activity_preferences -->
    <string name="preference_organisation_title">Organisation</string>
    <string name="preference_organisation_summary">Signalétique de votre organisation </string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="preference_organisation_name">Nom de l\'entreprise</string>
    <string name="preference_organisation_address">Adresse de l\'entreprise</string>
    <string name="preference_organisation_phone1">Numéro de téléphonne 1</string>
    <string name="preference_organisation_phone2">Numéro de téléphonne 2</string>
    <string name="preference_organisation_email">Mail</string>
    <string name="preference_organisation_vat">Numéro TVA</string>
    <string name="preference_organisation_bank">Numéro de compte bancaire</string>
    <string name="preference_employee_title">Gestion des livreurs</string>
    <string name="preference_products_title">Gestion des produits</string>
    <string name="sync_notification_title">Erreur synchronisation</string>
    <string name="preference_synchronisation_title">Synchronisation des catalogues</string>
    <string name="preference_synchronisation_sheet_name">Selection de la Google Sheet</string>
    <string name="preference_synchronisation_sheet_id">Google Sheet ID</string>
    <string name="preference_synchronisation_start">Démarrer la synchronisation</string>
    <string name="preference_synchronisation_account">Selection du compte de synchronisation</string>
    <string name="preference_about">A propos</string>
    <string name="preference_about_version">Numéro de version</string>
    <string name="preference_about_reset">Reset la base de donnée</string>
    <string name="preference_about_reset_notification_ko">Erreur, ne peut pas reset la base de donnée</string>
    <string name="preference_about_reset_notification_ok">Base de donnée reset</string>

    <!-- Sync delivery notes upload -->
    <string name="fragment_sync_notes_fragment_title">Synchronisation des notes d\'envoi PDF</string>
    <string name="fragment_sync_notes_start_button_title">Démarrer la synchronisation</string>





    <!-- Google Sign in-->
    <string name="fragment_google_sign_in_title">Connection au compte Google</string>
    <string name="fragment_google_sign_in_sign_in_button">Login</string>
    <string name="fragment_google_sign_in_sign_out_button">Logout</string>
    <string name="fragment_google_sign_in_disconnect_button">Révoquer</string>
    <string name="fragment_google_sign_in_account_not_allowed_hint">Le compte n\'a pas les droits</string>
    <string name="fragment_google_sign_in_account_allowed_hint">Le compte est autorisé</string>

    <string name="fragment_google_sheet_select_name_hint">Nom de la Google SpreadSheet </string>
    <string name="fragment_google_sheet_select_save">Vérifier et Enregistrer</string>

    <string name="fragment_select_products_custom_discount_hint">Discount</string>

    <!-- sell custom-->
    <string name="fragment_delivery_products_custom_error_cannot_be_empty">Ce champ est obligatoire</string>
    <string name="fragment_delivery_products_custom_error_bad_format">Mauvais format de nombre</string>
    <string name="fragment_delivery_products_custom_new_title">Création d\'une vente</string>
    <string name="sync_database_worker_offline_error">Hors ligne - Synchro des catalogues impossible</string>
    <string name="sync_database_worker_success">Synchro des catalogues OK</string>
    <string name="preference_synchronisation_upload_notes">Synchro des notes d\'envoi</string>



    <!-- -->
</resources>
