<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_google_sheet_select_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@android:drawable/ic_menu_search"
            android:hint="@string/fragment_google_sheet_select_name_hint"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            tools:layout_editor_absoluteX="-18dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/fragment_google_sheet_select_not_allowed"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:tooltipText="@string/fragment_google_sign_in_account_not_allowed_hint"
        app:layout_constraintBottom_toTopOf="@+id/fragment_google_sheet_select_save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:srcCompat="@android:drawable/presence_busy" />

    <ImageView
        android:id="@+id/fragment_google_sheet_select_allowed"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:tooltipText="@string/fragment_google_sign_in_account_allowed_hint"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_google_sheet_select_not_allowed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:srcCompat="@android:drawable/presence_online" />

    <Button
        android:id="@+id/fragment_google_sheet_select_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:background="@color/colorPrimary"
        android:text="@string/fragment_google_sheet_select_save"
        android:textColor="@color/buttonLabel"
        android:textSize="@dimen/text_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>