<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_delivery_products_custom_new_layout_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_delivery_products_custom_new_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_select_products_custom_name_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_delivery_products_custom_new_layout_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_delivery_products_custom_new_layout_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_delivery_products_custom_new_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_select_products_custom_price_hint"
            android:inputType="numberDecimal"
            android:digits="0123456789," />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_delivery_products_custom_new_layout_vat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_delivery_products_custom_new_layout_price">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_delivery_products_custom_new_vat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_select_products_custom_vat_hint"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_delivery_products_custom_new_layout_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_delivery_products_custom_new_layout_vat">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_delivery_products_custom_new_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_select_products_custom_quantity_hint"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_delivery_products_custom_new_layout_discount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_delivery_products_custom_new_layout_quantity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_delivery_products_custom_new_discount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_select_products_custom_discount_hint"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/fragment_delivery_products_custom_new_save_button"
        android:layout_width="411dp"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:text="@string/fragment_select_products_custom_button_save"
        android:textColor="@color/buttonLabel"
        android:textSize="@dimen/text_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_delivery_products_custom_new_layout_discount" />

</androidx.constraintlayout.widget.ConstraintLayout>