<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_select_custom_products_rv_layout_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_select_custom_products_rv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_select_products_custom_name_hint" />

     </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_select_custom_products_rv_layout_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_select_custom_products_rv_layout_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_select_custom_products_rv_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_select_products_custom_price_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_select_custom_products_rv_layout_vat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_select_custom_products_rv_layout_price">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_select_custom_products_rv_vat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_select_products_custom_vat_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_select_custom_products_rv_layout_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_select_custom_products_rv_layout_vat">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_select_custom_products_rv_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_select_products_custom_quantity_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/fragment_select_custom_products_rv_button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/fragment_select_products_custom_button_save"
        android:textColor="@color/buttonLabel"
        android:textSize="@dimen/text_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_select_custom_products_rv_layout_quantity"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>